--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>Javascript</title>
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
 </head>
 <body>
-
+<h1>ToDo Write</h1>
 
 </body>
 </html>
