earlier was for sync and defer is used here

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
     <title>Javascript</title>
-    <script src="script.js" async></script>
+<!--    scripts will be executed sequentially-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
+    <script src="script3.js" defer></script>
 </head>
 <body>
 <h1>ToDo Write</h1>
